增加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ ChatDemo-UI3.0.xcodeproj/xcuserdata/xieyajie.xcuserdatad/xcschemes/ChatDemo-UI3.
 ChatDemo-UI3.0.xcodeproj/xcuserdata/xieyajie.xcuserdatad/xcschemes/xcschememanagement.plist
 Pods
 Podfile.lock
+ChatDemo-UI3.0.xcodeproj
+ChatDemo-UI3.0.xcworkspace
